--- a/Artzy/WindowsFormsApp1/Loginn.csproj
+++ b/Artzy/WindowsFormsApp1/Loginn.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,18 +69,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Droplabel.cs" />
-    <Compile Include="frmChat.cs">
+    <Compile Include="frmConf.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmChat.Designer.cs">
-      <DependentUpon>frmChat.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmConfiguracao.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmConfiguracao.Designer.cs">
-      <DependentUpon>frmConfiguracao.cs</DependentUpon>
+    <Compile Include="frmConf.Designer.cs">
+      <DependentUpon>frmConf.cs</DependentUpon>
     </Compile>
     <Compile Include="frmDashboard.cs">
       <SubType>Form</SubType>
@@ -105,6 +99,12 @@
     <Compile Include="frmLoja.Designer.cs">
       <DependentUpon>frmLoja.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUser.Designer.cs">
+      <DependentUpon>frmUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundPB.cs">
@@ -119,11 +119,8 @@
     <EmbeddedResource Include="frmCadastro.resx">
       <DependentUpon>frmCadastro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmChat.resx">
-      <DependentUpon>frmChat.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmConfiguracao.resx">
-      <DependentUpon>frmConfiguracao.cs</DependentUpon>
+    <EmbeddedResource Include="frmConf.resx">
+      <DependentUpon>frmConf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDashboard.resx">
       <DependentUpon>frmDashboard.cs</DependentUpon>
